--- a/my-campaign/src/styles.css
+++ b/my-campaign/src/styles.css
@@ -34,12 +34,11 @@ code {
 }
 
 .form {
-  height: 654px;
+  /*height: 654px;*/
+  height: auto;
   width: 534px;
   left: 423px;
-  top: 86px;
   border-radius: 8px;
-  padding: 40px;
 
   box-sizing: border-box;
 
@@ -47,14 +46,13 @@ code {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 40px;
+  padding: 20px 20px;
   gap: 8px;
 
   position: absolute;
   left: 30.65%;
   right: 30.65%;
-  top: 10.21%;
-  bottom: 12.01%;
+  top: 15%;
 
   background: #FFFFFF;
   border: 2px solid #4A0243;
@@ -113,6 +111,8 @@ code {
   width: 454px;
   height: 44px;
   color: white;
+  margin-top: 20px;
+
   display: flex;
   flex-direction: row;
   justify-content: center;
