--- a/my-campaign/src/styles.css
+++ b/my-campaign/src/styles.css
@@ -28,18 +28,28 @@ code {
   font-weight: bolder;
 }
 
+.h3 {
+  width: 100%;
+  height: 21px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 21px;
+  text-align: center;
+  color: #4A0243;
+}
+
 .paragraph {
   font-size: 16px;
   font-weight: lighter;
 }
 
 .form {
-  height: 654px;
+  /*height: 654px;*/
+  height: auto;
   width: 534px;
   left: 423px;
-  top: 86px;
   border-radius: 8px;
-  padding: 40px;
 
   box-sizing: border-box;
 
@@ -47,14 +57,13 @@ code {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 40px;
+  padding: 20px 20px;
   gap: 8px;
 
   position: absolute;
   left: 30.65%;
   right: 30.65%;
-  top: 10.21%;
-  bottom: 12.01%;
+  top: 15%;
 
   background: #FFFFFF;
   border: 2px solid #4A0243;
@@ -113,6 +122,8 @@ code {
   width: 454px;
   height: 44px;
   color: white;
+  margin-top: 20px;
+
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -136,5 +147,29 @@ code {
   flex-direction: column;
   justify-content: center;
   gap: 20px;
+}
 
+.main--big {
+  /* height: auto;
+  width: 1274px;
+  left: 62px;
+  top: 78px;
+  border-radius: 8px;
+  padding: 8px 4px 8px 4px;*/
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 8px 4px;
+  gap: 4px;
+
+  position: absolute;
+  width: 1274px;
+  height: auto;
+  left: 62px;
+  top: 78px;
+
+  background: #FFFFFF;
+  border: 1px solid #000000;
+  border-radius: 8px;
 }
