--- a/my-campaign/src/styles.css
+++ b/my-campaign/src/styles.css
@@ -28,6 +28,17 @@ code {
   font-weight: bolder;
 }
 
+.h3 {
+  width: 100%;
+  height: 21px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 21px;
+  text-align: center;
+  color: #4A0243;
+}
+
 .paragraph {
   font-size: 16px;
   font-weight: lighter;
@@ -136,5 +147,29 @@ code {
   flex-direction: column;
   justify-content: center;
   gap: 20px;
+}
 
+.main--big {
+  /* height: auto;
+  width: 1274px;
+  left: 62px;
+  top: 78px;
+  border-radius: 8px;
+  padding: 8px 4px 8px 4px;*/
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 8px 4px;
+  gap: 4px;
+
+  position: absolute;
+  width: 1274px;
+  height: auto;
+  left: 62px;
+  top: 78px;
+
+  background: #FFFFFF;
+  border: 1px solid #000000;
+  border-radius: 8px;
 }
