--- a/my-campaign/src/components/leaders_list/leader_list.css
+++ b/my-campaign/src/components/leaders_list/leader_list.css
@@ -1,3 +1,12 @@
+.leaders-list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    padding: 20px;
+    width: 100%;
+    height: 240px;
+}
+
 .card__leader {
     display: flex;
     flex-direction: column;
@@ -19,3 +28,4 @@
     top: 0px;
     border-radius: 12px;
 }
+
