--- a/my-campaign/src/styles.css
+++ b/my-campaign/src/styles.css
@@ -39,13 +39,35 @@ code {
   color: #4A0243;
 }
 
+.text-list {
+  width: auto;
+  height: 21px;
+  font-style: normal;
+  font-weight: 200;
+  font-size: 14px;
+  line-height: 21px;
+  text-align: left;
+  color: #4A0243;
+}
+
+.text-list__bold {
+  width: auto;
+  height: 21px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 21px;
+  text-align: left;
+  color: #4A0243;
+  text-transform: capitalize;
+}
+
 .paragraph {
   font-size: 16px;
   font-weight: lighter;
 }
 
 .form {
-  /*height: 654px;*/
   height: auto;
   width: 534px;
   left: 423px;
@@ -173,4 +195,22 @@ code {
   background: #FFFFFF;
   border: 1px solid #000000;
   border-radius: 8px;
+}
+
+.paper-sheet {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 90%;
+  height: 750px;
+
+  background: #FFFFFF;
+  border: 1px solid black;
+  border-radius: 8px;
+  margin-top: 80px;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 7px 13px 37px rgba(0, 0, 0, .6);
+
 }
