--- a/my-campaign/src/components/menu_admin/menu_admin.css
+++ b/my-campaign/src/components/menu_admin/menu_admin.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: flex-end;
   padding: 0px;
   gap: 20px;
 
@@ -26,13 +27,6 @@
   width: 1250px;
   height: 19px;
   margin-right: 40px;
-
-
-  /* Inside auto layout */
-
-  flex: none;
-  order: 1;
-  flex-grow: 1;
 }
 
 
