--- a/my-campaign/src/styles.css
+++ b/my-campaign/src/styles.css
@@ -20,12 +20,13 @@ code {
 .title {
   font-size: 40px;
   font-weight: bold;
-  font: #4A0243;
+  color: #4A0243;
 }
 
 .subtitle {
   font-size: 30px;
   font-weight: bolder;
+  color: #4A0243;
 }
 
 .h3 {
@@ -173,12 +174,6 @@ code {
 }
 
 .main--big {
-  /* height: auto;
-  width: 1274px;
-  left: 62px;
-  top: 78px;
-  border-radius: 8px;
-  padding: 8px 4px 8px 4px;*/
 
   display: flex;
   flex-direction: row;
@@ -213,4 +208,38 @@ code {
   margin-right: auto;
   box-shadow: 7px 13px 37px rgba(0, 0, 0, .6);
 
+}
+
+.row-list {
+  height: 50px;
+  width: 100%;
+  left: 20px;
+  top: 20px;
+  margin-top: 5px;
+  border-radius: 8px;
+  padding: 0px 10px 0px 10px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid #dfdddd;
+}
+
+.row-list:hover {
+  box-shadow: 7px 13px 37px rgba(0, 0, 0, .6);
+}
+
+.row-list__actions {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0px;
+  gap: 4px;
+
+  width: 52px;
+  height: 24px;
+
+  background: #FFFFFF;
 }
