--- a/my-campaign/src/pages/home_page_admin/home_page_admin.css
+++ b/my-campaign/src/pages/home_page_admin/home_page_admin.css
@@ -7,7 +7,7 @@
     gap: 20px;
   
     position: absolute;
-    width: 1118px;
+    width: 100%;
     height: 470px;
     left: 120px;
     top: 78px;
