--- a/my-campaign/src/components/menu_admin/menu_admin.css
+++ b/my-campaign/src/components/menu_admin/menu_admin.css
@@ -3,11 +3,11 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-end;
-  padding: 0px;
+  padding: 0px 20px;
   gap: 20px;
 
   position: absolute;
-  width: 1380px;
+  width: 100%;
   height: 64px;
   left: 0px;
   top: 0px;
